refactor(Spark post update to include latest log4j2 version): Migrated spark swagger to new repo and
