# src/main/resources/latest-spark-swagger-output.yaml
@@ -2,7 +2,6 @@
 swagger: "2.0"
 info:
   description: "OpenTripPlanner Middleware API"
-  version: ""
   title: "OTP Middleware"
   termsOfService: ""
   contact:
@@ -54,6 +53,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/AdminUser"
+          responseSchema:
+            $ref: "#/definitions/AdminUser"
   /api/admin/user/verification-email:
     get:
       tags:
@@ -64,6 +65,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/Job"
+          responseSchema:
             $ref: "#/definitions/Job"
   /api/admin/user:
     get:
@@ -95,6 +98,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ResponseList"
+          responseSchema:
+            $ref: "#/definitions/ResponseList"
     post:
       tags:
       - "api/admin/user"
@@ -105,6 +110,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -113,6 +119,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/AdminUser"
+          responseSchema:
             $ref: "#/definitions/AdminUser"
   /api/admin/user/{id}:
     get:
@@ -133,6 +141,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/AdminUser"
+          responseSchema:
+            $ref: "#/definitions/AdminUser"
     put:
       tags:
       - "api/admin/user"
@@ -149,6 +159,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -157,6 +168,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/AdminUser"
+          responseSchema:
             $ref: "#/definitions/AdminUser"
     delete:
       tags:
@@ -174,6 +187,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/AdminUser"
+          responseSchema:
             $ref: "#/definitions/AdminUser"
   /api/secure/application/{id}/apikey:
     post:
@@ -199,6 +214,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ApiUser"
+          responseSchema:
+            $ref: "#/definitions/ApiUser"
   /api/secure/application/{id}/apikey/{apiKeyId}:
     delete:
       tags:
@@ -222,6 +239,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ApiUser"
+          responseSchema:
+            $ref: "#/definitions/ApiUser"
   /api/secure/application/authenticate:
     post:
       tags:
@@ -233,17 +252,19 @@ paths:
       - name: "username"
         in: "query"
         description: "Auth0 username (usually email address)."
-        required: false
+        required: true
         type: "string"
       - name: "password"
         in: "query"
         description: "Auth0 password."
-        required: false
+        required: true
         type: "string"
       responses:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/TokenHolder"
+          responseSchema:
             $ref: "#/definitions/TokenHolder"
   /api/secure/application/fromtoken:
     get:
@@ -259,6 +280,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ApiUser"
+          responseSchema:
+            $ref: "#/definitions/ApiUser"
   /api/secure/application/verification-email:
     get:
       tags:
@@ -269,6 +292,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/Job"
+          responseSchema:
             $ref: "#/definitions/Job"
   /api/secure/application:
     get:
@@ -300,6 +325,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ResponseList"
+          responseSchema:
+            $ref: "#/definitions/ResponseList"
     post:
       tags:
       - "api/secure/application"
@@ -310,6 +337,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -318,6 +346,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/ApiUser"
+          responseSchema:
             $ref: "#/definitions/ApiUser"
   /api/secure/application/{id}:
     get:
@@ -338,6 +368,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ApiUser"
+          responseSchema:
+            $ref: "#/definitions/ApiUser"
     put:
       tags:
       - "api/secure/application"
@@ -354,6 +386,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -362,6 +395,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/ApiUser"
+          responseSchema:
             $ref: "#/definitions/ApiUser"
     delete:
       tags:
@@ -380,6 +415,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ApiUser"
+          responseSchema:
+            $ref: "#/definitions/ApiUser"
   /api/secure/monitoredtrip/checkitinerary:
     post:
       tags:
@@ -390,6 +427,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -398,6 +436,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/ItineraryExistence"
+          responseSchema:
             $ref: "#/definitions/ItineraryExistence"
   /api/secure/monitoredtrip:
     get:
@@ -429,6 +469,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ResponseList"
+          responseSchema:
+            $ref: "#/definitions/ResponseList"
     post:
       tags:
       - "api/secure/monitoredtrip"
@@ -439,6 +481,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -447,6 +490,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/MonitoredTrip"
+          responseSchema:
             $ref: "#/definitions/MonitoredTrip"
   /api/secure/monitoredtrip/{id}:
     get:
@@ -467,6 +512,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/MonitoredTrip"
+          responseSchema:
+            $ref: "#/definitions/MonitoredTrip"
     put:
       tags:
       - "api/secure/monitoredtrip"
@@ -483,6 +530,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -491,6 +539,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/MonitoredTrip"
+          responseSchema:
             $ref: "#/definitions/MonitoredTrip"
     delete:
       tags:
@@ -510,6 +560,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/MonitoredTrip"
+          responseSchema:
+            $ref: "#/definitions/MonitoredTrip"
   /api/secure/triprequests:
     get:
       tags:
@@ -521,7 +573,7 @@ paths:
       - name: "userId"
         in: "query"
         description: "The OTP user for which to retrieve trip requests."
-        required: false
+        required: true
         type: "string"
       - name: "limit"
         in: "query"
@@ -555,7 +607,13 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/TripRequest"
+            type: "array"
+            items:
+              $ref: "#/definitions/TripRequest"
+          responseSchema:
+            type: "array"
+            items:
+              $ref: "#/definitions/TripRequest"
   /api/secure/monitoredcomponent:
     get:
       tags:
@@ -586,6 +644,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ResponseList"
+          responseSchema:
+            $ref: "#/definitions/ResponseList"
     post:
       tags:
       - "api/secure/monitoredcomponent"
@@ -596,6 +656,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -604,6 +665,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/MonitoredComponent"
+          responseSchema:
             $ref: "#/definitions/MonitoredComponent"
   /api/secure/monitoredcomponent/{id}:
     get:
@@ -624,6 +687,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/MonitoredComponent"
+          responseSchema:
+            $ref: "#/definitions/MonitoredComponent"
     put:
       tags:
       - "api/secure/monitoredcomponent"
@@ -640,6 +705,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -648,6 +714,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/MonitoredComponent"
+          responseSchema:
             $ref: "#/definitions/MonitoredComponent"
     delete:
       tags:
@@ -666,6 +734,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/MonitoredComponent"
+          responseSchema:
             $ref: "#/definitions/MonitoredComponent"
   /api/secure/user/{id}/verify_sms/{phoneNumber}:
     get:
@@ -688,6 +758,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/VerificationResult"
+          responseSchema:
+            $ref: "#/definitions/VerificationResult"
   /api/secure/user/{id}/verify_sms/{code}:
     post:
       tags:
@@ -709,6 +781,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/VerificationResult"
+          responseSchema:
+            $ref: "#/definitions/VerificationResult"
   /api/secure/user/fromtoken:
     get:
       tags:
@@ -723,6 +797,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/OtpUser"
+          responseSchema:
+            $ref: "#/definitions/OtpUser"
   /api/secure/user/verification-email:
     get:
       tags:
@@ -733,6 +809,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/Job"
+          responseSchema:
             $ref: "#/definitions/Job"
   /api/secure/user:
     get:
@@ -764,6 +842,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ResponseList"
+          responseSchema:
+            $ref: "#/definitions/ResponseList"
     post:
       tags:
       - "api/secure/user"
@@ -774,6 +854,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -782,6 +863,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/OtpUser"
+          responseSchema:
             $ref: "#/definitions/OtpUser"
   /api/secure/user/{id}:
     get:
@@ -802,6 +885,8 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/OtpUser"
+          responseSchema:
+            $ref: "#/definitions/OtpUser"
     put:
       tags:
       - "api/secure/user"
@@ -818,6 +903,7 @@ paths:
         required: true
         type: "string"
       - in: "body"
+        name: "body"
         description: "Body object description"
         required: true
         schema:
@@ -826,6 +912,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/OtpUser"
+          responseSchema:
             $ref: "#/definitions/OtpUser"
     delete:
       tags:
@@ -843,6 +931,8 @@ paths:
         "200":
           description: "successful operation"
           schema:
+            $ref: "#/definitions/OtpUser"
+          responseSchema:
             $ref: "#/definitions/OtpUser"
   /api/secure/logs:
     get:
@@ -878,7 +968,13 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/ApiUsageResult"
+            type: "array"
+            items:
+              $ref: "#/definitions/ApiUsageResult"
+          responseSchema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ApiUsageResult"
   /api/admin/bugsnag/eventsummary:
     get:
       tags:
@@ -903,7 +999,13 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/BugsnagEvent"
+            type: "array"
+            items:
+              $ref: "#/definitions/BugsnagEvent"
+          responseSchema:
+            type: "array"
+            items:
+              $ref: "#/definitions/BugsnagEvent"
   /otp/*:
     get:
       tags:
@@ -1006,7 +1108,7 @@ definitions:
       data:
         type: "array"
         items:
-          type: "string"
+          $ref: "#/definitions/Object"
       offset:
         type: "integer"
         format: "int32"
